argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: argocd
    managedBy: argocd
    managementCodeGroup: chrismlee42
    managementCodeProject: argocd-config
  name: argocd
spec:
  finalizers:
    - kubernetes
